fixed title background and some spacing issues on projects page

--- a/style.css
+++ b/style.css
@@ -31,6 +31,7 @@ body {
 	padding-left: 0.2%;	
 	/*padding-top: 30px;
 	padding-bottom: 30px;*/
+	vertical-align: middle;
 }
 
 #background{
@@ -45,7 +46,8 @@ body {
   /*background:white;*/
   /*border:1px solid black;*/
   	/*height: 300px;*/
-  	height: 55vh;
+  	/*height: 300px;*/
+  	height: 25vw;
   	overflow:hidden;
 }
 
@@ -230,7 +232,7 @@ a:active{
 	font-weight: bold;
 	font-size: 4vw;
 	/*text-align: left;*/
-	margin-left: 6.5%;
+	margin-left: 1%;
 	float: left;
 	margin-top: 15%;
 	/*float: left;*/
@@ -238,7 +240,7 @@ a:active{
 
  #pBod{
  	position: relative;
-	margin-left: 6.5%;
+	margin-left: 3%;
 	float: left;
 	margin-top: 5%;
 	text-align: center;
@@ -298,6 +300,7 @@ a:active{
  #top{
  	display: inline;
  	position: relative;
+ 	font-family: 'Gill Sans', 'Gill Sans MT', Calibri, sans-serif;
  	/*background-color: orange;*/
  	/*clear:both;*/
 
@@ -310,7 +313,7 @@ a:active{
 
 
 #gHead{
- font-family: Verdana;
+ font-family: 'Gill Sans', 'Gill Sans MT', Calibri, sans-serif;
  text-align: center;
  font-size: 3.5vw;
 }
@@ -338,7 +341,9 @@ a:active{
 
 #posterDiv{
 	float: right;
-	width: 50%;
+	width: 45%;
+	margin-left: 2.5%;
+	margin-right: 2.5%;
  	height: auto;
  	position: relative;
  	/*clear: both;*/
@@ -346,7 +351,9 @@ a:active{
 
 #mayAd{
 	position: relative;
-	width: 50%;
+	width: 45%;
+	margin-right: 2.5%;
+	margin-left: 2.5%;
 	height: auto;
 }
 
@@ -380,7 +387,7 @@ a:active{
 }
 
 .hovering{
-	opacity: .7;
+	opacity: .8;
 	background-color: black;
 	color: white;
 	/*float: right;*/
@@ -390,6 +397,7 @@ a:active{
 	/*height: auto;*/
 	right: 0;
 	text-align: center;
+	font-family: 'Gill Sans', 'Gill Sans MT', Calibri, sans-serif;
 }
 
 .hovering1{
@@ -400,15 +408,15 @@ a:active{
 }
 
 .hovering2{
-	margin-top: 5%;
+	margin-top: 7.5%;
 	padding-top: 7.5%;
 	padding-bottom: 7.5%;
-	font-size: 4vw;
+	font-size: 3vw;
 	opacity: .85;
 }
 
 .hovering3{
-	margin-top: 15%;
+	margin-top: 7.5%;
 	padding-top: 7.5%;
 	padding-bottom: 7.5%;
 	font-size: 4vw;
